# projeto-ecommerce-sql

./: .gitignore  README.md  automacao_marketing.py  docker-compose.yml  gerar_relatorios.py  pyproject.toml
config/: init.sql
exports/: distribuicao_estados.csv  kpis_gerenciais.csv  relatorio_ecommerce.xlsx
outputs/: campanha_marketing_SP.csv
queries/: insights_vendes.sql  relatorio_gerencial.sql
