[project]
name = "projeto-ecommerce-sql"
version = "0.1.0"
description = "projeto-ecommerce-sql"
authors = [{ name = "Douglas Faria", email = "douglasfariasil@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python>=9.7.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "reportlab>=5.0.0",
]
